[project]
name = "anp-fuel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=25.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]
